Cambiando Inicio por Home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav id="menu">
         <ul>
-            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">Contenido</a></li>
             <li><a href="#">Requerimientos</a></li>
             <li><a href="#">Lenguajes</a></li>
